syntax = "proto3";

package echo;
option go_package = "github.com/salrashid123/grpc_health_proxy/example/src/echo";

service EchoServer {
  rpc SayHello (EchoRequest) returns (EchoReply) {}
  rpc SayHelloStream(EchoRequest) returns (stream EchoReply) {}    
}

message EchoRequest {
  string name = 1;
}

message EchoReply {
  string message = 1;
}
